--- a/dutch_defence_hopton_attack_leningrad_var_modern_var.wiki
+++ b/dutch_defence_hopton_attack_leningrad_var_modern_var.wiki
@@ -15,13 +15,13 @@
 = Dutch Defence: Hopton Attack, Leningrad Variation, Modern Variations =
 ===6. Nf3===
 Superficially the positions of white's knights look a bit like in the open Sicilians, except 
-in the Sicilians the knights are look towards the queen side; but here both knights are looking towards king side. 
+in the Sicilians the knights are looking towards the queen side; but here both knights are looking towards king side. 
 White has traded off a center pawn for a side pawn. White has now a lead in development. But black
 has superior cards, provided that black survives the attack, in the end game. 
 <br><br>
 No matter what is played next, the lines will remain sharp. 
 White has an edge in every line here. But black is not to far behind with ideas of counter play.
-Black has noumerous ways to defend. White will have to ajust any attacking plans accordingly. 
+Black has noumerous ways to defend. White will have to ajust any attacking plans accordingly.
 
 == Black Responses ==
 
@@ -52,6 +52,64 @@ Neither side is interested to trade of the queens any time soon. Black aims to g
 White aims to maintain the initiative. White's goal is to create an open file for the rook on d1. 
 {{-}}
 
+=== Rossmann Variation, in depth ===
+'''6.Nf3 h6, 7.Bh4 d5, 8.Nc5 Nf6, 9.c3 O-O, 10.Bb5 Ne4, 11.Nxe4 dxe4, 12.Nd2 Bf5, 13.Qe2 g5, 14.Bg3 e5, 15.Bc4+ Kh7, 16.d5 Na5, 17.O-O-O b5, 18.Bxd5 Qxd5, 19.Bc4 Nxc4, 20.Nxc4 Qe6 '''
+{{Chess diagram small|=
+| tleft
+| 
+|+/= 
+
+ 8 |rd|  |  |  |  |rd|  |  |=
+ 7 |pd|  |pd|  |  |  |bd|kd|=
+ 6 |  |  |  |  |qd|  |  |pd|=
+ 5 |  |  |  |  |pd|bd|pd|  |=
+ 4 |  |  |nl|  |pd|  |  |  |=
+ 3 |  |  |pl|  |  |  |bl|  |=
+ 2 |pl|pl|  |  |ql|pl|pl|pl|=
+ 1 |  |  |kl|rl|  |  |  |rl|=
+    a  b  c  d  e  f  g  h
+
+|
+}}
+White is going to push pawns on the king side later on. 
+Black is going to meet this pushing pawns on the queen side. 
+Both sides have castled on the opposite side. 
+Common continuations are  <br><br>
+21.b3 a5, 22.Ne3 a4, 23.b4 Bg6 <br><br>
+Black tries to hold on to the bishop pair and open up the lines. 
+White tries to trade the remaining bishop against the other one. White's
+goal is than to create a strong knight vs weak bishop scenario. The position is unbalanced. 
+This also a battle of ideas. White has a slide edge. But black has a point in terms of counter play. 
+{{-}}
+
+=== Coyame Variation ===
+'''6.Nf3 Rb8, 7.d5 Ne5 '''
+{{Chess diagram small|=
+| tleft
+| 
+|+/= 
+
+ 8 |  |rd|bd|qd|kd|  |nd|rd|=
+ 7 |pd|pd|pd|pd|pd|  |bd|  |=
+ 6 |  |  |  |  |  |  |pd|pd|=
+ 5 |  |  |  |pl|nd|  |  |  |=
+ 4 |  |  |  |  |nl|  |  |bl|=
+ 3 |  |  |  |  |  |nl|  |  |=
+ 2 |pl|pl|pl|  |  |pl|pl|pl|=
+ 1 |rl|  |  |ql|kl|bl|  |rl|=
+    a  b  c  d  e  f  g  h
+
+|
+}}
+White needs to decided where to put the knight next. Typically, it goes forward to Nc5.
+Common continuations are  <br><br>
+8.Nc5 Nf6, 9.c3 O-O, 10.Bb5 Ne4 <br><br>
+Black castles short. White castles long. Both sides will end up pushing their pawns infront of their kings. 
+Neither side is interested to trade of the queens any time soon. Black aims to gain the bishop pair. 
+White aims to maintain the initiative. White's goal is to create an open file for the rook on d1. 
+{{-}}
+
+=== Rossmann Variation, in depth ===
 == Theory table ==
 {{Chess Opening Theory/Table}}
 '''1. d4 f5 2. Bg5 g6 3.Nc3 Bg7, 4.e4 fxe4, 5.Nxe4 Nc6, 6.Nf3'''
@@ -115,6 +173,22 @@ White aims to maintain the initiative. White's goal is to create an open file fo
 
 ==References==
 {{reflist}}
+* Lichess Studies, Dutch Defence, Hopton Attack
+* Chess.com, Library: Hopton Attack, Leningrad Variations
+* Gameknot.com, annotated games: Dutch Defence, Hopton Attack, modern variations
+* chess-teacher.com, Dutch Defence, Hopton Attack, open variations
+* old.chesstempo.com, Dutch Defence, Semi Leningard Variations, open variations
+* Everyman, Play the Dutch: Leningrad Variation, ISBN 9781857446418
+* chessable.com, Dutch Defence, Hopton Attack, Chess Opening Theory, 
+* Jan Boekelman – Beat the Dutch Defense – A Killer Weapon against the Dutch Defense. 260 pages. ISBN 9789464201581
+* Jan Werle – Unbeatable - The Art of Defence – ISBN 9789464201413
+* Adrien Demuth – The Modernized Dutch Defense – ISBN 9789492510556
+* Tibor Karolyi, Play the Dutch! - ISBN 978-6155793080
+* france-echecs.com, Théorie de la défense Hollandaise
+* Rakuten, théorie des systemes du monde entier, Echecs: Défense Hollandaise
+* Alexis Henri Brialmont, Wentworth Press, Le Système Défensif Néerlandais ISBN 978-1010877950
+* echecs-et-strategie.com, La Défense Hollandaise de Jules Moussard
+* Étienne Bacrot, S’entraîner aux échecs, La stratégie Hollandaise, ISBN 9786155793356
+
 {{NCO}}
 {{Chess Opening Theory/Footer}}
-
