--- a/dutch_defence_hopton_attack_leningrad_var_modern_var.wiki
+++ b/dutch_defence_hopton_attack_leningrad_var_modern_var.wiki
@@ -130,7 +130,7 @@ attack on the king side. Black castles short. White castles long.
 |
 }}
 Both sides have semi open files for each rook respectively. 
-This very unique for this positon. White is going to push on king side. 
+This is very unique for this positon. White is going to push on king side. 
 Black is responds with a push on the queen side. 
 Common continuations are  <br><br>
 8.b3 Qxg6, 9.Nxg7 Nxc2, 10.Qxc2 Qxc2+, +/- <br><br>
