--- a/dutch_defence_hopton_attack_leningrad_var_modern_var.wiki
+++ b/dutch_defence_hopton_attack_leningrad_var_modern_var.wiki
@@ -131,7 +131,7 @@ attack on the king side. Black castles short. White castles long.
 }}
 Both sides have semi open files for each rook respectively. 
 This is very unique for this position. White is going to push on king side. 
-Black is responds with a push on the queen side. 
+Black responds with a push on the queen side. 
 Common continuations are  <br><br>
 8.b3 Qxg6, 9.Nxg7 Nxc2, 10.Qxc2 Qxc2+, +/- <br><br>
 This line is pretty much forced. Whoever deviates from this line is dead lost. There is no chance from comming back. 
