--- a/dutch_defence_hopton_attack_leningrad_var_modern_var.wiki
+++ b/dutch_defence_hopton_attack_leningrad_var_modern_var.wiki
@@ -160,8 +160,8 @@ material. However making a move on either side is very difficult.
 }}
 Both side try to develop and castle as quickly as possible. 
 Common continuations are  <br><br>
-8.Nxe5 Bxe5, 9.f4 Bxb2, 10.Rb1 Bg7, = <br><br>
-8.h4 d6, 9.h5 Bf5, 10.Qe2 h6, +/=<br><br>
+8. Bb5 Nh6 9. Bxh6 Bxh6 10. Ne5 O-O +/= <br><br>
+8. Qd2 Nxd4 9.Nxd4 Qxc5 10. Be3 Qd6  +/=<br><br>
 Most of the time of the time, as counter intuitive as it sounds, is to allow black 
 to chase down the queen side. This offers for white the plan with an even stronger 
 attack on the king side. Black castles short. White castles long. 
