--- a/dutch_defence_hopton_attack_leningrad_var_modern_var.wiki
+++ b/dutch_defence_hopton_attack_leningrad_var_modern_var.wiki
@@ -163,7 +163,7 @@ Common continuations are  <br><br>
 8. Bb5 Nh6 9. Bxh6 Bxh6 10. Ne5 O-O +/= <br><br>
 8. Qd2 Nxd4 9. Nxd4 Qxc5 10. Be3 Qd6  = <br><br>
 8. c3 d5 9. Bb5 Ne7 10. Bxe7 Qxe7 = <br><br>
-In this lines, white gives up both bishops, in order to create an outpost for each night. 
+In this lines, white gives up both bishops, in order to create an outpost for each knight. 
 Black casles short. White castles long. White has more center control and there fore has an edge. 
 Despite opposite castle, the pawn push on opposite sides doesn't occure. Instead, every side follows their own agenda
 Blach counters with the bishop pair along two diagonals. Therefore, black tries to open up the board. 
@@ -249,6 +249,7 @@ White tries to keep the positon as closed as posible. As a result of this, the g
 * Alexis Henri Brialmont, Wentworth Press, Le Système Défensif Néerlandais ISBN 978-1010877950
 * echecs-et-strategie.com, La Défense Hollandaise de Jules Moussard
 * Étienne Bacrot, S’entraîner aux échecs, La stratégie Hollandaise, ISBN 9786155793356
+* Paul van der Sterren, Introductie tot de openingstheorie 1 - De wereld van de schaakopening, ISBN 9789043906500
 
 {{NCO}}
 {{Chess Opening Theory/Footer}}
