--- a/fr_dutch_defence.wiki
+++ b/fr_dutch_defence.wiki
@@ -34,10 +34,9 @@ Comme les Noirs répondent à 1.d4 par f5, rompant ainsi la symétrie, la défen
 : Victoire des blancs 36 %, match nul 42,1 %, victoire des noirs 29,1 %.<ref>https://www.365chess.com/opening.php?master=1&m=2&n=7&ms=d4&ns=7</ref>
 
 == Références ==
+* Lichess.com
+* chess.com
 
-{{reflist}}
-{{NCO}}
-{{BCO2}}
-{{ChessFooter}}
+[[fi:Shakkiaapinen/Peli/1. d4/1...f5]]
 
 [[fi:Shakkiaapinen/Peli/1. d4/1...f5]]
