bypass x264 -> skip video decoding

--- a/fr_Bladel.wiki
+++ b/fr_Bladel.wiki
@@ -1,4 +1,23 @@
 =Bladel=__NOTOC__
+
+{{Diagramme d'échecs
+| tleft
+| '''Défense Bladel'''
+<!--
+ 8 -->|rd|nd|bd|qd|kd|bd|__|rd<!--
+ 7 -->|pd|pd|pd|pd|pd|__|__|pd<!--
+ 6 -->|__|__|__|__|__|__|pd|nd<!--
+ 5 -->|__|__|__|__|__|pd|__|__<!--
+ 4 -->|__|__|pl|pl|__|__|__|__<!--
+ 3 -->|__|__|nl|__|__|__|__|__<!--
+ 2 -->|pl|pl|__|__|pl|pl|pl|pl<!--
+ 1 -->|rl|__|bl|ql|kl|bl|nl|rl<!--
+       a  b  c  d  e  f  g  h
+-->| '''style: ''' ouverture semi-fermée : une défense '''agressive''' <br>
+''' ECO : ''' A84 <br>
+''' après : ''' 1. d4 f5 2. c4 g6 3. Nc3 Nh6
+}}
+
  
 {{Chess Opening Theory/Position|=
 |Bladel|
